More fleshed out version of the presentation

--- a/IntroductionToBaskerville/IntroductionToBaskerville.qmd
+++ b/IntroductionToBaskerville/IntroductionToBaskerville.qmd
@@ -5,7 +5,7 @@ format:
   revealjs:
     incremental: false
     theme: moon
-    footer: "Slurm walk-through"
+    footer: "Using Slurm"
     logo: RSG.png
     css: logo.css
     fig-cap-location: margin
@@ -22,10 +22,16 @@ format:
 
 All of your data and code is available on all nodes.
 
+
+If you want to follow along with any of the examples, you can find them here -
+
+ https://github.com/baskerville-hpc/basicSlurmScripts
+
+
 ## Simple Slurm script
 
 
-````{.bash code-line-numbers="|1|2-4|6-7|9-11"}
+````{.bash  filename="basicSlurm.sh" code-line-numbers="|1|2-4|6-7|9-11"}
 #!/bin/bash
 #SBATCH --qos arc
 #SBATCH --account edmondac-rsg
@@ -50,7 +56,7 @@ while logged into a Baskerville SSH connection.
 
 ## Simple Slurm script
 
-````{.bash}
+````{.bash filename="basicSlurm.sh"}
 #!/bin/bash
 #SBATCH --qos arc
 #SBATCH --account edmondac-rsg
@@ -71,21 +77,35 @@ You can run this script on a compute node using;
 
 
 
-## Sbatch outout 
+## Sbatch outout
 
-Two output files produced, slurm-&lt;job id&gt;.out and slurm-&lt;job id&gt;.stats
-:::: {.columns}
+Two output files produced,
 
-::: {.column width="50%"}
+### slurm-&lt;job id&gt;.out
 
-:::
+````{.default}
+This script is running on bask-pg0308u24a.cluster.baskerville.ac.uk
+````
 
-::: {.column width="50%"}
-
-
-
-:::
-::::
+### slurm-&lt;job id&gt;.stats
+````{.default}
++--------------------------------------------------------------------------+
+| Job on the Baskerville cluster:
+| Starting at Tue Jul 25 11:32:17 2023 for allsoppj(836257)
+| Identity jobid 474749 jobname basicSlurm.sh
+| Running against project edmondac-rsg and in partition baskerville-a100_40
+| Requested cpu=2,mem=6G,node=1,billing=2 - 01:00:00 walltime
+| Assigned to nodes bask-pg0308u24a
+| Command /bask/homes/a/allsoppj/BaskervilleRemoteDropIn/BasicSlurmFile/basicSlurm.sh
+| WorkDir /bask/homes/a/allsoppj/BaskervilleRemoteDropIn/BasicSlurmFile
++--------------------------------------------------------------------------+
++--------------------------------------------------------------------------+
+| Finished at Tue Jul 25 11:32:37 2023 for allsoppj(836257) on the Baskerville Cluster
+| Required (00:00.689 cputime, 4232K memory used) - 00:00:20 walltime
+| JobState COMPLETING - Reason None
+| Exitcode 0:0
++--------------------------------------------------------------------------+
+````
 
 ## Checking on a job
 
@@ -100,6 +120,16 @@ Two output files produced, slurm-&lt;job id&gt;.out and slurm-&lt;job id&gt;.sta
 + If you want to see how one particular job is doing
 
 &nbsp;**squeue -j &lt;job id&gt;**
+
+<br/>
+For example
+<br/>
+````{.default code-line-numbers="false"}
+[allsoppj@bask-pg0310u18a BasicSlurmFile]$ squeue -j 474735
+             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON)
+            474735 baskervil basicSlu allsoppj  R       0:09      1 bask-pg0308u24a
+````
+
 :::
 ::: {.column width="50%"}
 
@@ -112,7 +142,6 @@ Two output files produced, slurm-&lt;job id&gt;.out and slurm-&lt;job id&gt;.sta
 | F    | Failed     |                                      |
 :::
 ::::
-Put example of a status here
 
 
 ## Oh no, I've started a job and need to stop it
@@ -121,12 +150,13 @@ Put example of a status here
 <br/>
 Jobs can be stopped at any time using
 
-&nbsp;**scancel -j &lt;job id&gt;**
+&nbsp;**scancel &lt;job id&gt;** # Note the lack of a "-j" for this.
+<br/>
+
 <br/>
 
 ### Quick tip
 
-<br/>
 
 Store job id in a bash variable directly using:
 
@@ -138,7 +168,30 @@ Store job id in a bash variable directly using:
 Job name is used throughout slurm, so change it to something more readable than the script name:
 
 ````{.bash}
-#SBATCH --job-name "A more readable name"
+#SBATCH --job-name "Amorereadablename"
+````
+
+<br/>
+
+````{.default code-line-number="|7"}
+[allsoppj@bask-pg0310u18a BasicSlurmFile]$ cat slurm-474832.out
+
+This script is running on bask-pg0308u24a.cluster.baskerville.ac.uk
+[allsoppj@bask-pg0310u18a BasicSlurmFile]$ cat slurm-474832.stats
+ Job on the Baskerville cluster:
+ Starting at Tue Jul 25 17:37:51 2023 for allsoppj(836257)
+ Identity jobid 474832 jobname Amorereadablename
+ Running against project edmondac-rsg and in partition baskerville-a100_40
+ Requested cpu=2,mem=6G,node=1,billing=2 - 01:00:00 walltime
+ Assigned to nodes bask-pg0308u24a
+ Command /bask/homes/a/allsoppj/BaskervilleRemoteDropIn/BasicSlurmFile/changeName.sh
+ WorkDir /bask/homes/a/allsoppj/BaskervilleRemoteDropIn/BasicSlurmFile
+
+
+ Finished at Tue Jul 25 17:38:11 2023 for allsoppj(836257) on the Baskerville Cluster
+ Required (00:00.701 cputime, 4236K memory used) - 00:00:19 walltime
+ JobState COMPLETING - Reason None
+ Exitcode 0:0
 ````
 
 ## Change the hardware you want you job to run on
@@ -148,7 +201,7 @@ Baskerville has two types of GPU,
 + A100-40 (default)
 + A100-80
 ````{.bash}
-#SBATCH contraint=a100_80
+#SBATCH --constraint=a100_80
 ````
 
 ## Change the number of nodes or GPUs
@@ -172,6 +225,10 @@ Default option for this is <br/>&nbsp;**slurm-%j.out**
 
 Full list of options at https://doc.hpc.iter.es/slurm/how_to_slurm_filenamepatterns
 
+
+Don't try **#SBATCH --output $(pwd)/outputfiles/%A_%a.out**, it won't work.
+
+
 ## Slurm Arrays
 
 <br/>
@@ -182,7 +239,7 @@ Run many jobs from one Slurm file
 #SBATCH --array=1-10%2
 ````
 
-Adding this will run the script 10 times with 2 jobs running simultaneously 
+Adding this will run the script 10 times with 2 jobs running simultaneously
 
 Need to use with environment variables to make it useful.
 
@@ -190,4 +247,20 @@ Need to use with environment variables to make it useful.
 + SLURM_ARRAY_JOB_ID    - Job id of the array itself
 + SLURM_ARRAY_TASK_ID   - Index of the job in the array, e.g. a value between 1 and 10 from above.
 
-To track these jobs use the **sacct -j &lt;Job id&gt;** command
+To track these jobs use the **sacct -j &lt;Job id&gt;** command, or the squeue command.
+
+
+## Two questions about Slurm Arrays
+
+
++ How do I give different values to each job?
+  - Use the SLURM_ARRAY_TASK_ID as a lookup to the information you want to use.
+
++ How do I make a Slurm array bigger than MaxArraySize?
+  - Set to 4000 on BlueBEAR, defaults to 1001.
+  - Use a script to repeatedly launch a slurm job with an increasing offset each time 1,2,3.....
+     * Slurm scripts can take command line arguments
+     * Add this to SLURM_ARRAY_TASK_ID before doing the lookup.
+
+
+Used this approach to run nearly 700,000 jobs in blocks of 4000, 500 at a time.
